// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentActions Dispatches loadGeneExpression action with the right list of genes when Add is clicked 1`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": Array [
      "Gzma",
      "Lyz2",
      "GeneA",
      "GeneB",
      "GeneC",
    ],
  },
  "type": "genes/expressionLoading",
}
`;

exports[`ComponentActions Dispatches loadGeneExpression action with the right list of genes when Add is clicked 2`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "genes": Array [
      "Gzma",
      "Lyz2",
      "GeneA",
      "GeneB",
      "GeneC",
    ],
    "newGenes": Object {
      "orderedGeneNames": Array [
        "GeneA",
        "GeneB",
        "GeneC",
      ],
      "rawExpression": Object {
        "datatype": undefined,
        "index": Array [
          0,
          0,
          2,
          0,
          2,
        ],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          1,
          3,
          5,
        ],
        "size": Array [
          3,
          3,
        ],
        "values": Array [
          1,
          2,
          5,
          1,
          6,
        ],
      },
      "stats": Object {
        "rawMean": Array [
          0.3,
          2.3,
          1.3,
        ],
        "rawStdev": Array [
          0.4,
          2,
          1,
        ],
        "truncatedMax": Array [
          1,
          3,
          5,
        ],
        "truncatedMin": Array [
          0,
          2,
          1,
        ],
      },
      "truncatedExpression": Object {
        "datatype": undefined,
        "index": Array [
          0,
          0,
          2,
          0,
          2,
        ],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          1,
          3,
          5,
        ],
        "size": Array [
          3,
          3,
        ],
        "values": Array [
          1,
          2,
          3,
          0.5,
          1,
        ],
      },
      "zScore": Object {
        "datatype": undefined,
        "index": Array [
          0,
          0,
          2,
          0,
          2,
        ],
        "mathjs": "SparseMatrix",
        "ptr": Array [
          0,
          1,
          3,
          5,
        ],
        "size": Array [
          3,
          3,
        ],
        "values": Array [
          1,
          1,
          3,
          3,
          1,
        ],
      },
    },
  },
  "type": "genes/expressionLoaded",
}
`;

exports[`ComponentActions Dispatches loadGeneExpression action with the right list of genes when Overwrite is clicked 1`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": Array [
      "Gzma",
    ],
  },
  "type": "genes/expressionLoading",
}
`;

exports[`ComponentActions Dispatches loadGeneExpression action with the right list of genes when Overwrite is clicked 2`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": Array [
      "Gzma",
    ],
  },
  "type": "genes/expressionLoaded",
}
`;

exports[`ComponentActions Dispatches loadGeneExpression action with the right list of genes when Remove is clicked 1`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": Array [
      "Lyz2",
    ],
  },
  "type": "genes/expressionLoading",
}
`;

exports[`ComponentActions Dispatches loadGeneExpression action with the right list of genes when Remove is clicked 2`] = `
Object {
  "payload": Object {
    "componentUuid": "asd",
    "experimentId": "1234",
    "genes": Array [
      "Lyz2",
    ],
  },
  "type": "genes/expressionLoaded",
}
`;
